# breakout.asm

./: .clang-format  .clang-tidy  .gitignore  README.md  meson.build
src/: ball.S  ball.inc  base.h  block.S  block.inc  check_bounds.S  main.S  main.c  meson.build  paddle.S  paddle.inc  playfield.inc  sdl.c  sdl.inc  sound.S  util.inc  window.inc
